# small-scripts

./: README.md  numba_example.py  parse-fib.py
Qwen-3-Next/: qwen3-fp16-bench.sh  qwen3-fp4-bench.sh  qwen3-fp8-bench.sh  qwen3-pareto.sh
blas/: CMakeLists.txt  Makefile  README.md  RESULTS.md  benchmark_cublaslt  benchmark_cublaslt.cu  benchmark_cublaslt_algos  benchmark_cublaslt_algos.cu  validate_cublaslt  validate_cublaslt.cu
blas/src/: matrix_mul.cu  matrix_mul.cuh  matrix_mul_benchmark.cu  matrix_mul_test.cu
cuda-gemm/: CMakeLists.txt  Makefile  README.md  benchmark.cu  build.sh
cuda-gemm/basic-gemm/: CMakeLists.txt
cuda-gemm/basic-gemm/include/: gemm.h
cuda-gemm/basic-gemm/src/: gemm.cu  gemm_basic.cu  gemm_shared_mem.cu  test_basic_gemm.cu
cuda-gemm/docs/: README.md
cuda-gemm/tensor-core-gemm/: CMakeLists.txt
cuda-gemm/tensor-core-gemm/include/: gemm.h  gemm_tensor_core.h
cuda-gemm/tensor-core-gemm/src/: gemm_tensor_core.cu  gemm_tensor_cores.cu  gemm_utils.cu  test_tensor_core_gemm.cu
cuda-gemm/tma-gemm/: CMakeLists.txt  Makefile  build.sh
cuda-gemm/tma-gemm/include/: gemm.h
cuda-gemm/tma-gemm/src/: CMakeLists.txt  gemm_tma.cu  utils.cu
cuda-gemm/tma-gemm/tests/: CMakeLists.txt  test_tma_gemm.cu
dsr1/: dsr1-fp4-bench.sh
kernels/reduce/: Makefile  README.md  reduce_kernels.cu  reduce_kernels_cub.cu  test_reduce  test_reduce.cu
kernels/reduce-fused/: Makefile  README.md  reduce_kernels_rms.cu  test_rms.cu
kernels/silu/: README.md  silu_test
linear/: 2bench_linear.py  bench_linear_fp8_fp16.py  benchmark_linear.py
q3n/: qwen3-bug31186.sh  qwen3-fp8-bench.sh  qwen3-pareto-b200-1k1k-8k1k.sh
quant-scale/: scale_ops.cpp  scale_ops.cu  test-scale.py
silu/: Makefile  silu_kernel.cu
torch-compile/: linear-simple.py
